# HEAVEN-Autonomous-Penetration-Testing

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.claude/: settings.local.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  docker.yml  release.yml
deploy/helm/heaven/: .helmignore  Chart.yaml  values.yaml
docs/: BENCHMARK_HOWTO.md  BENCHMARK_RESULTS.md  COMPARISON.md  DEMO.md  FAQ.md  QUICKSTART.md
docs/methodology/: README.md  nist_800_115.md  owasp_testing_guide.md  ptes.md
heaven/: __init__.py  config.py  demo.py  engagement.py  main.py  methodology.py  orchestrator.py  settings_catalog.py
heaven-ui/: index.html  package-lock.json  package.json  vite.config.js
heaven-ui/src/: App.jsx  api.js  index.css  main.jsx  scanModes.js  theme.js
heaven-ui/src/components/: CommandPalette.jsx  EngagementPicker.jsx  ErrorBoundary.jsx  FirstRunGuide.jsx  ForcedPasswordChange.jsx  Header.jsx  HelpTip.jsx  LiveTerminal.jsx  Logo.jsx  Markdown.jsx  NetworkTopology3D.jsx  ReportMenu.jsx  ScanList.jsx  Sidebar.jsx  Skeleton.jsx  TargetsInput.jsx  Toast.jsx  Tour.jsx
heaven-ui/src/context/: Jobs.jsx
heaven-ui/src/pages/: AIPlans.jsx  Assets.jsx  Autonomous.jsx  Benchmark.jsx  Coverage.jsx  Cve.jsx  Dashboard.jsx  Diff.jsx  Engagement.jsx  FindingDetail.jsx  Findings.jsx  Health.jsx  KillChain.jsx  Knowledge.jsx  Lateral.jsx  LoginPage.jsx  Methodology.jsx  NotFound.jsx  Postex.jsx  Reports.jsx  Sast.jsx  Sca.jsx  Scans.jsx  Settings.jsx  Tickets.jsx  Watch.jsx
heaven/ai/: __init__.py  attack_chain_planner.py  autonomous_loop.py  coverage_grader.py  fp_review.py  knowledge_graph.py  llm_gateway.py  recon_agent.py  vuln_hypothesis.py
heaven/api/: server.py
heaven/cli/: __init__.py  _dashboard.py  _helpers.py  _richconfig.py  assets.py  audit.py  autonomous.py  benchmark.py  cloud.py  completion.py  config_cmd.py  coverage.py  cve.py  db.py  demo.py  diff.py  engage.py  exploitdb.py  findings.py  info.py  init.py  install_tools.py  knowledge.py  lateral.py  methodology.py  mitre.py  postex.py  quickstart.py  replay.py  sast.py  sbom.py  sca.py  scan.py  server.py  status.py  tickets.py  train.py  update.py  use.py  watch.py
heaven/db/: SPLIT_PLAN.md  __init__.py  connection.py  models.py  repository.py  schema.sql
heaven/devsecops/: aggregator.py  ai_remediation.py  alerting.py  burp_export.py  compliance_report.py  diff_finder.py  evidence.py  frameworks.py  inventory.py  pdf_report.py  sbom.py  vuln_kb.py
heaven/mitre/: kill_chain.py  taxii_client.py
heaven/ml/: ai_brain.py  feature_engine.py  nvd_pipeline.py  risk_model.py  train_model.py  train_priors.py
heaven/postex/: __init__.py  bloodhound_collector.py  cred_validator.py  enum_engine.py  gtfobins.py  lateral.py  linpeas_runner.py  loot.py  mitre_attack.py  session.py  win_enum_engine.py
heaven/recon/: ad_scanner.py  adaptive_intel.py  auth_session.py  azure_tenant.py  cloud_enum.py  container_scanner.py  ctf_extractor.py  deep_recon.py  dns_recon.py  email_scanner.py  evasion_engine.py  git_secrets.py  honeypot_detector.py  iot_scanner.py  network_exposure.py  network_scanner.py  param_miner.py  shodan_recon.py  web_crawler.py  wireless_posture.py  wireless_recon.py
heaven/security/: audit.py  auth.py  sanitizer.py  self_audit.py  vault.py
heaven/testing/: selftest.py
heaven/utils/: cvss.py  env_file.py  logger.py  platform_detect.py  seeding.py  tool_installer.py  watcher.py
heaven/vulnscan/: __init__.py  access_control.py  advanced_attacks.py  anomaly_probe.py  api_scanner.py  attack_chain.py  auth_scanner.py  cloud_scanner.py  cms_scanner.py  cve_mapper.py  dir_fuzzer.py  eol_scanner.py  exploit_proof.py  exploitdb_client.py  exposure_scanner.py  fp_suppress.py  idor_scanner.py  injection_scanner.py  live_cve_feed.py  misconfig_scanner.py  msf_client.py  nuclei_scanner.py  nvd_client.py  oast.py  oob_scanner.py  osv_client.py  safe_validator.py  sast_runner.py  sca_scanner.py  sqlmap_runner.py  ssl_scanner.py  web_fuzzer.py  zeroday_engine.py
heaven/vulnscan/sast_rules/: go_security.yml  js_injection.yml  python_injection.yml
migrations/versions/: 0002_extended_schema.py
nvd_data/: feature_names_nvd.json
scripts/: install.ps1  install.sh  sync_test_count.py  uninstall.ps1  uninstall.sh
tests/: conftest.py  test_access_control.py  test_ad_scanner_depth.py  test_api_scan_auth.py  test_api_v2.py  test_autonomous_loop.py  test_cloud_scanner.py  test_compose_no_public_exposure.py  test_criticality.py  test_cve_mapper_taxonomy.py  test_demo.py  test_dependency_scanning.py  test_detector_fp_round3.py  test_diff_and_tickets.py  test_download_model.py  test_dynamic_linking_and_ai.py  test_engagement.py  test_engagement_rename.py  test_engagement_resolution.py  test_env_file.py  test_exposure_scanner.py  test_finding_precision.py  test_fp_hardening.py  test_framework_parity.py  test_honeypot_and_exploitdb.py  test_injection_boolean_sqli.py  test_injection_probes.py  test_integrations.py  test_internal_network_scan.py  test_live_cve_feed.py  test_llm_gateway.py  test_llm_gateway_gemini.py  test_llm_gateway_providers.py  test_methodology_coverage.py  test_network_exposure.py  test_nuclei_parse.py  test_nvd_client.py  test_oob_and_misconfig.py  test_oob_cmdi.py  test_orchestrator_domain.py  (+34 more)
tests/benchmarks/: README.md  __init__.py  conftest.py  docker-compose.yml  metrics.py  test_adapters.py  test_dvwa_baseline.py  test_fp_reduction.py  test_metrics.py  test_native_benchmark.py  test_native_sqli_recall.py
tests/benchmarks/adapters/: __init__.py  burp.py  sqlmap.py  zap.py
tests/benchmarks/ground_truth/: dvwa.yaml  native.yaml
tests/benchmarks/native/: runner.py  vuln_app.py
tests/benchmarks/reporters/: __init__.py  comparison_csv.py  markdown_report.py
tests/benchmarks/reports/: .gitignore  dvwa_live.md
(+9 files in other folders)
