[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heaven-pentest"
version = "1.0.0"
description = "HEAVEN — autonomous penetration-testing framework with AI-driven attack-chain planning, continuous monitoring, SAST/DAST, and 31 CLI commands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Nisarg Chasmawala", email = "nisargkc@gmail.com"}
]
maintainers = [
    {name = "Nisarg Chasmawala", email = "nisargkc@gmail.com"}
]
keywords = [
    "security", "pentesting", "vulnerability-scanner", "devsecops",
    "owasp", "mitre-attack", "sast", "dast", "ai-security",
    "autonomous-pentesting", "fastapi", "click",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    # Core async
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    # API server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "slowapi>=0.1.9",
    # ML / Data — xgboost-cpu avoids the 300+MB nvidia-nccl wheel; macOS still gets full xgboost
    "scikit-learn>=1.4.0",
    "xgboost-cpu>=2.0.0; sys_platform != 'darwin'",
    "xgboost>=2.0.0; sys_platform == 'darwin'",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "joblib>=1.3.0",
    # Recon tools
    "scapy>=2.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    # Cloud SDKs
    "boto3>=1.34.0",
    # Utilities
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "rich-click>=1.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "hypothesis>=6.152.4",
    # Security + the default offline data store. These power the documented
    # out-of-the-box experience (JWT sessions, vault encryption, SQLite mode),
    # so they belong in the base install rather than an extra.
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "aiosqlite>=0.19.0",
]

[project.urls]
Homepage      = "https://github.com/nishu2402/HEAVEN-Autonomous-Penetration-Testing"
Documentation = "https://github.com/nishu2402/HEAVEN-Autonomous-Penetration-Testing#readme"
Repository    = "https://github.com/nishu2402/HEAVEN-Autonomous-Penetration-Testing"
Issues        = "https://github.com/nishu2402/HEAVEN-Autonomous-Penetration-Testing/issues"
Changelog     = "https://github.com/nishu2402/HEAVEN-Autonomous-Penetration-Testing/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/nishu2402/HEAVEN-Autonomous-Penetration-Testing/blob/main/SECURITY.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
cloud-gcp = ["google-cloud-compute>=1.17.0", "google-cloud-storage>=2.14.0"]
cloud-azure = ["azure-mgmt-compute>=30.0.0", "azure-mgmt-storage>=21.0.0"]

# LLM provider SDKs for the AI layers (optional — HEAVEN runs without any).
# Pick one:  pip install -e ".[gemini]"  /  ".[anthropic]"  /  ".[openai]"
# Or all three:  pip install -e ".[llm]"
gemini = ["google-genai>=1.0.0"]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.40.0"]
llm = ["google-genai>=1.0.0", "anthropic>=0.39.0", "openai>=1.40.0"]

# Feature extras — optional capabilities. HEAVEN degrades gracefully without
# them (the feature is skipped with a clear message), so a base `pip install`
# works and you add only what you need. `requirements.txt` installs everything
# for a full local dev environment.
recon = ["dnspython>=2.6.0", "python-nmap>=0.7.1", "python-whois>=0.9.4", "shodan>=1.31.0"]
reports = ["jinja2>=3.1.3", "weasyprint>=62.0", "reportlab>=4.0.0", "matplotlib>=3.8.0", "tabulate>=0.9.0"]
lateral = ["impacket>=0.11.0", "asyncssh>=2.14.0", "ldap3>=2.9.1"]
mitre = ["mitreattack-python>=0.0.6", "stix2>=3.0.1", "taxii2-client>=2.3.0"]
deploy = ["docker>=7.0.0", "kubernetes>=29.0.0"]
scheduling = ["apscheduler>=3.10.0", "alembic>=1.13.0"]

# Everything except dev tooling — `pip install -e ".[all]"`
all = [
    "dnspython>=2.6.0", "python-nmap>=0.7.1", "python-whois>=0.9.4", "shodan>=1.31.0",
    "jinja2>=3.1.3", "weasyprint>=62.0", "reportlab>=4.0.0", "matplotlib>=3.8.0", "tabulate>=0.9.0",
    "impacket>=0.11.0", "asyncssh>=2.14.0", "ldap3>=2.9.1",
    "mitreattack-python>=0.0.6", "stix2>=3.0.1", "taxii2-client>=2.3.0",
    "docker>=7.0.0", "kubernetes>=29.0.0",
    "apscheduler>=3.10.0", "alembic>=1.13.0",
    "google-genai>=1.0.0", "anthropic>=0.39.0", "openai>=1.40.0",
]

[project.scripts]
heaven = "heaven.main:cli"

[tool.setuptools.packages.find]
include = ["heaven", "heaven.*"]

[tool.setuptools.package-data]
# Ship non-Python runtime data inside the wheel so `pip install heaven-pentest`
# users get the SAST rulesets (heaven/vulnscan/sast_rules/*.yml) and the
# PostgreSQL bootstrap schema (heaven/db/schema.sql). Without this the wheel
# contains only .py files and those features silently degrade.
heaven = ["**/*.yml", "**/*.yaml", "**/*.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
# B608: table names in SQL strings come from class-level constants, not user input.
#       All user-supplied values use SQLAlchemy bound parameters (:param_name).
skips = ["B608"]
